--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^19.2.3",
     "react-router-dom": "6.28.0",
     "lucide-react": "0.344.0",
     "recharts": "2.12.1",
@@ -19,13 +19,8 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.35",
-    "autoprefixer": "^10.4.18"
+    "vite": "^6.2.0"
   }
 }
